--- a/TranslateFlightTest/TranslateFlightTest/TranslateFlightTest.csproj
+++ b/TranslateFlightTest/TranslateFlightTest/TranslateFlightTest.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3EF0EE7F-802F-4D1F-95FA-3FAD4F16B8D5}</ProjectGuid>
+    <ProjectGuid>{83BB766C-B90F-448E-AE62-3B88B33A3C2F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MyGenericTest</RootNamespace>
-    <AssemblyName>MyGenericTest</AssemblyName>
+    <RootNamespace>TranslateFlightTest</RootNamespace>
+    <AssemblyName>TranslateFlightTest</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
